apps/base/media/prowlarr/prowlarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://prowlarr.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Prowlarr"
    gethomepage.dev/description: "Indexer manager"
    gethomepage.dev/app: prowlarr
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/prowlarr.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`prowlarr.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: prowlarr
          port: 9696
  tls: {}
